# imexsh-test

./: .gitignore
angular_app/: README.md
api/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 13ac7a88a695_modelo_inicial.py  2f3d84db5bf8_modelo_inicial.py  b443d4197229_agregando_onupdate_cascade_en_devices_.py
api/app/dependencies_factory/clients/: postgresdb_client.py
api/app/dependencies_factory/repositories/: __init__.py  postgres_device_group_repository.py  postgres_device_repository.py
api/app/dependencies_factory/use_cases/: __init__.py  create_device_group.py  device_group.py
api/app/implementations/clients/: postgres_db_client.py  postgresdb_client.py
api/app/implementations/repositories/: __init__.py  postgres_device_group_data_repository.py  postgres_device_repository.py
api/app/implementations/repositories/entity/: __init__.py  device.py  device_group.py
api/app/src/cases/create_device_group_data/: __init__.py  create_device_group_data_request.py  create_device_group_data_response.py  create_device_group_data_use_case.py
api/app/src/cases/delete_device_group_data/: __init__.py  delete_device_group_data_request.py  delete_device_group_data_response.py  delete_device_group_data_use_case.py
api/app/src/cases/get_all_device_groups_data/: __init__.py  (+3 more)
api/app/src/exceptions/: device_group_repository_exception.py  device_repository_exception.py  postgres_client_error.py
api/app/src/shemas/: device_group_schema.py
api/app/web_app/routes/: __init__.py  devices_group_routes.py
(+39 files in other folders)
